Bug 157402 - Untranslated theme names in Customization Options in LibreOffice 7.6 (Persona)
Summary: Untranslated theme names in Customization Options in LibreOffice 7.6 (Persona)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.1.2 release
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:24.2.0
Keywords:
: 152509 (view as bug list)
Depends on:
Blocks: LibreOffice-Themes
  Show dependency treegraph
 
Reported: 2023-09-23 19:15 UTC by Albert Acer
Modified: 2024-12-19 11:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
LibreOffice theme names without translation to Spanish (106.38 KB, image/jpeg)
2023-09-23 19:22 UTC, Albert Acer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Acer 2023-09-23 19:15:39 UTC
Description:
Hi, I am a user and tester of the Spanish version of LibreOffice from Colombia.

When I am testing LibreOffice 7.6.1 in Spanish and I try to change the LibreOffice theme, in the Customization Options, I see that the names of each theme appear in English and not in Spanish contrary to how they should be. This affects the entire LO 7.6 branch in Spanish and earlier versions.

Steps to Reproduce:
1. Open LibreOffice Writer 7.6.1 in Spanish.
2. Click on the Tools (“Herramientas” in Spanish) Menu and then click on 
   "Options" (“Opciones” in Spanish).
3. Open the LibreOffice branch.
4. Find and select the "Customization" (“Personalización” en español) option.
5. On the right side, under LibreOffice Themes, place the cursor or pointer over each of the available themes. There we can see that the names of those themes are in English, without translation to Spanish, as we can see in the screenshot that I attach today as graphical support of this report.

Actual Results:
LibreOffice theme names without translation to Spanish

Expected Results:
LibreOffice theme names translated to Spanish


Reproducible: Always


User Profile Reset: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: es
Module: TextDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 Albert Acer 2023-09-23 19:22:04 UTC
Created attachment 189779 [details]
LibreOffice theme names without translation to Spanish

In the screenshot I have attached we can see that the names of the LibreOffice Writer Themes are not translated into English.
Comment 2 Julien Nabet 2023-09-24 09:25:28 UTC
Code pointer:
these strings are from extras/source/gallery/personas/personas_list.txt
and they're used in cui/source/options/personalization.cxx
see https://opengrok.libreoffice.org/xref/core/cui/source/options/personalization.cxx?r=a4633dad#159
Comment 3 Albert Acer 2023-11-28 21:16:16 UTC
I'm sorry, I don't know how to put those LibreOffice themes in Spanish. I am not a programmer or software developer. I'm just an ordinary user. I reported this because I didn't know how or where to set the correct translation.
I just know that Weblate or the corresponding similar tool should set the translation, for the Spanish interface, like this:

"Blanco" instead of "White".
"Gris" instead of "Gray".
"Oscuro" instead of "Dark".
"Rosado", or, "Rosa" instead of "Pink".
"Sand" instead of "Sand".
"Green" instead of "Green".
Comment 4 Julien Nabet 2023-12-02 10:40:34 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/160240

If this patch is ok (not sure since I'm not accustomed about adding translation), it just allows the translation.
I mean, it'll require afterwards the real translation in Weblate + synchro with repos.
Comment 5 Commit Notification 2023-12-04 16:20:37 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a6dc2a42263816461600307b5f8271a5c5d8d031

tdf#157402: translate personas

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Albert Acer 2023-12-11 06:03:58 UTC
(In reply to Julien Nabet from comment #6)
> Strings are in Weblate and now just require the translation with some
> propositions from Google translate:
> 
> White:
> https://translations.documentfoundation.org/translate/libo_ui-master/
> cuimessages/es/?checksum=866afed94b169590&q=note%3ArtdnJ&sort_by=-
> priority%2Cposition
> 
> "Blanca" ?
> 
> 
> Gray:
> https://translations.documentfoundation.org/translate/libo_ui-master/
> cuimessages/es/?checksum=05d35f707bcb4543&q=note%3AZnuUj&sort_by=-
> priority%2Cposition
> 
> "Gris" ?
> 
> Dark:
> https://translations.documentfoundation.org/translate/libo_ui-master/
> cuimessages/es/?checksum=baa90f3a1beea2db&q=note%3ALvV3G&sort_by=-
> priority%2Cposition
> 
> "Oscura" ?
> 
> Pink:
> https://translations.documentfoundation.org/translate/libo_ui-master/
> cuimessages/es/?checksum=0c03bffdaa9611d5&q=note%3Aqey6J&sort_by=-
> priority%2Cposition
> 
> "Rosa" ?
> 
> Sand:
> https://translations.documentfoundation.org/translate/libo_ui-master/
> cuimessages/es/?checksum=274d7e6718f83066&q=note%3AiV24E&sort_by=-
> priority%2Cposition
> 
> "Arena" ?
> 
> Green:
> https://translations.documentfoundation.org/translate/libo_ui-master/
> cuimessages/es/?checksum=5adcbdb58f1e924d&q=note%3AwnK2c&sort_by=-
> priority%2Cposition
> 
> "Verde" ?
> 
> Since I'm not Spanish native, I prefer you let fill these.

That translation is correct for Spanish. Thank you for your support to improve the interface in Spanish.
Comment 8 Julien Nabet 2023-12-11 07:41:42 UTC
Thank you Adolfo for the translation!

(I made the French translations).
Comment 9 lol 2024-12-19 11:32:25 UTC
*** Bug 152509 has been marked as a duplicate of this bug. ***