tdf#157402: translate personas

Change-Id: I6b2bc6f8fa76ddb669a71d0858a43c62bf51d58d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160240
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>